force-app/main/default/objects/Integration_Request_Template__c/Integration_Request_Template__c.object-meta.xml
<CustomObject>
    <label>Integration Request Template</label>
    <nameField>
        <displayFormat>INT-REQ-{0000}</displayFormat>
        <label>Integration Request Template Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Integration Request Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>