force-app/main/default/objects/Integration_Request_Template__c/fields/Body_Template__c.field-meta.xml
<CustomField>
    <fullName>Body_Template__c</fullName>
    <label>Body Template</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>