force-app/main/default/objects/Integration_Request_Template__c/fields/Conditional_Inclusion__c.field-meta.xml
<CustomField>
    <fullName>Conditional_Inclusion__c</fullName>
    <label>Conditional Inclusion</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>