force-app/main/default/objects/Integration_Request_Template__c/fields/SOQL_Filter__c.field-meta.xml
<CustomField>
    <fullName>SOQL_Filter__c</fullName>
    <label>SOQL Filter</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>