force-app/main/default/objects/Integration_Request_Template__c/fields/Source_Fields__c.field-meta.xml
<CustomField>
    <fullName>Source_Fields__c</fullName>
    <label>Source Fields</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>