force-app/main/default/objects/Integration_Request_Template__c/fields/Source_Object__c.field-meta.xml
<CustomField>
    <fullName>Source_Object__c</fullName>
    <label>Source Object</label>
    <length>255</length>
    <type>Text</type>
</CustomField>