force-app/main/default/objects/Integration_Request_Template__c/fields/Transformation_Logic__c.field-meta.xml
<CustomField>
    <fullName>Transformation_Logic__c</fullName>
    <label>Transformation Logic</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>